removed margin and padding on skills column div to stop blurring of texts

--- a/sass/2-layouts/_body.sass
+++ b/sass/2-layouts/_body.sass
@@ -84,9 +84,7 @@
                 display: flex
                 flex-direction: column
                 position: relative
-                margin: 27px
-                padding: 7px
-                // background-color: #29343a
+
                 #pillar
                   display: none
                   justify-content: space-around
